[package]
name = "fusd-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "tcp", "client"] }
log = { version = "0.4.20", features = ["std"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
